@@ -2,7 +2,7 @@
 REM $Id$
 
 REM Memory settings can be specified using parameters like: -Xms20480m -Xmx20480m -XX:MaxPermSize=384m
-java -XX:+UseConcMarkSweepGC -XX:+ExplicitGCInvokesConcurrent -XX:-UseGCOverheadLimit -Djava.endorsed.dirs=endorsed -jar ejbca-db-cli.jar %1 %2 %3 %4 %5 %6 %7 %8
+java -cp "ejbca-db-cli.jar;endorsed/*" org.ejbca.database.DatabaseCli %1 %2 %3 %4 %5 %6 %7 %8
 
 IF ERRORLEVEL 1 GOTO ERROR
 
